--- a/07 - An Array of Improvements/array-some-and-every.html
+++ b/07 - An Array of Improvements/array-some-and-every.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array .some() and .every()</title>
 </head>
+
 <body>
-<script>
-  const ages = [32, 15, 19, 12];
+  <script>
+    const ages = [21, 18, 17, 19];
 
-  // 👵👨 is there at least one adult in the group?
-  const adultPresent = ages.some(age => age >= 18);
-  console.log(adultPresent);
+    //some method
+    const adultPresent = ages.some(el => el >= 21);
 
-  // 🍻 is everyone old enough to drink?
-  const allOldEnough = ages.every(age => age >= 19);
-  console.log(allOldEnough);
+    //every method
+    const everyAdult = ages.every(el => el >= 18);
 
-
-</script>
+    console.log(everyAdult);
+  </script>
 </body>
+
 </html>
