--- a/08 - Say Hello to ...Spread and ...Rest/more-spread-examples.html
+++ b/08 - Say Hello to ...Spread and ...Rest/more-spread-examples.html
@@ -1,40 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Spread Examples</title>
 </head>
+
 <body>
   <div class="people">
     <p>Wes</p>
     <p>Kait</p>
     <p>Randy</p>
   </div>
-<script>
-  const people = Array.from(document.querySelectorAll('.people p'));
-  const names = people.map((person) => person.textContent );
+  <script>
+    const people = Array.from(document.querySelectorAll('.people p'));
+    const names = people.map((person) => person.textContent);
 
-  const deepDish = {
-    pizzaName: 'Deep Dish',
-    size: 'Medium',
-    ingredients: ['Marinara', 'Italian Sausage', 'Dough', 'Cheese']
-  };
+    const deepDish = {
+      pizzaName: 'Deep Dish',
+      size: 'Medium',
+      ingredients: ['Marinara', 'Italian Sausage', 'Dough', 'Cheese']
+    };
 
-  const shoppingList = ['Milk', 'Flour', ...deepDish.ingredients];
-  // console.log(shoppingList);
+    const shoppingList = ['Milk', 'Flour', ...deepDish.ingredients];
+    // console.log(shoppingList);
 
-  const comments = [
-    { id: 209384, text: 'I love your dog!' },
-    { id: 523423, text: 'Cuuute! 🐐' },
-    { id: 632429, text: 'You are so dumb' },
-    { id: 192834, text: 'Nice work on this wes!' },
-  ];
-  const id = 632429;
-  const commentIndex = comments.findIndex(comment => comment.id === id);
+    let comments = [{
+        id: 209384,
+        text: 'I love your dog!'
+      },
+      {
+        id: 523423,
+        text: 'Cuuute! 🐐'
+      },
+      {
+        id: 632429,
+        text: 'You are so dumb'
+      },
+      {
+        id: 192834,
+        text: 'Nice work on this wes!'
+      },
+    ];
 
-  const newComments = [...comments.slice(0,commentIndex), ...comments.slice(commentIndex + 1)];
-  console.log(newComments);
+    const id = 632429;
+    const commentIndex = comments.findIndex(comment => comment.id === id);
 
-</script>
+    const newComments = [...comments.slice(0, commentIndex), ...comments.slice(commentIndex + 1)];
+    console.log(newComments);
+  </script>
 </body>
+
 </html>
