--- a/08 - Say Hello to ...Spread and ...Rest/spreading-into-a-function.html
+++ b/08 - Say Hello to ...Spread and ...Rest/spreading-into-a-function.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Spread Examples</title>
 </head>
+
 <body>
-<script>
-  const inventors = ['Einstein', 'Newton', 'Galileo'];
-  const newInventors = ['Musk', 'Jobs'];
-  inventors.push(...newInventors);
-  console.log(inventors);
+  <script>
+    const inventors = ['Einstein', 'Newton', 'Galileo'];
+    const newInventors = ['Musk', 'Jobs'];
 
-  const name = ['Wes', 'Bos'];
+    inventors.push(...newInventors);
+    console.log(inventors);
 
-  function sayHi(first, last) {
-    alert(`Hey there ${first} ${last}`);
-  }
+    const name = ['Adam', 'Klepacz'];
 
-  sayHi(...name);
+    function sayHi(name, lastName) {
+      alert(`Hi there ${name} ${lastName}`);
+    }
 
-</script>
+    sayHi(...name);
+  </script>
 </body>
+
 </html>
-
-
