--- a/09 - Object Literal Upgrades/object-literal-upgrades.html
+++ b/09 - Object Literal Upgrades/object-literal-upgrades.html
@@ -1,59 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Object Literal Upgrades</title>
 </head>
+
 <body>
-<script>
-  const first = 'snickers';
-  const last = 'bos';
-  const age = 2;
-  const breed = 'King Charles Cav';
-  const dog = {
-    firstName: first,
-    last,
-    age,
-    breed,
-    pals: ['Hugo', 'Sunny']
-  };
-  console.log(dog);
+  <script>
+    const first = 'snickers';
+    const last = 'bos';
+    const age = 2;
+    const breed = 'King Charles Cav';
+    const dog = {
+      firstName: first,
+      last,
+      age,
+      breed,
+      pals: ['Hugo', 'Sunny', 'Smth']
+    };
 
-  const modal = {
-    create(selector) {
+    const modal = {
+      create(selector) {
 
-    },
-    open(content) {
+      },
+      open(content) {
 
-    },
-    close(goodbye) {
+      },
+      close(goodbye) {
 
+      }
     }
-  }
 
-  function invertColor(color) {
-      return '#' + ("000000" + (0xFFFFFF ^ parseInt(color.substring(1),16)).toString(16)).slice(-6);
-  }
+    function invertColor(color) {
+      alert('color inverterted ' + color);
+    }
 
-  const key = 'pocketColor';
-  const value = '#ffc600';
+    const key = 'pocketColor';
+    const value = '#ffc600';
 
-  const tShirt = {
-    [key]: value,
-    [`${key}Opposite`]: invertColor(value)
-  };
+    const tShirt = {
+      [key]: value,
+      [`${key}Opposite`]: invertColor(value)
+    }
 
-  const keys = ['size', 'color', 'weight'];
-  const values = ['medium', 'red', 100];
-
-  const shirt = {
-    [keys.shift()]: values.shift(),
-    [keys.shift()]: values.shift(),
-    [keys.shift()]: values.shift(),
-  }
-  console.log(shirt);
-
-
-</script>
+    console.log(tShirt);
+  </script>
 </body>
+
 </html>
