--- a/10 - Promises/promises-introduction.html
+++ b/10 - Promises/promises-introduction.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Promises!</title>
 </head>
+
 <body>
-<script>
-const postsPromise = fetch('http://wesbos.com/wp-json/wp/v2/posts');
+  <script>
+    const postsPromise = fetch('https://jsonplaceholder.typicode.com/posts');
 
-postsPromise
-  .then(data => data.json())
-  .then(data => { console.log(data) })
-  .catch((err) => {
-    console.error(err);
-  })
-
-</script>
+    postsPromise.then(response => console.log(response));
+  </script>
 </body>
+
 </html>
