--- a/10 - Promises/creating-promises.html
+++ b/10 - Promises/creating-promises.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Creating Promises!</title>
 </head>
-<body>
-<script>
-  const p = new Promise((resolve, reject) => {
-    setTimeout(() => {
-      reject(Error('Err wes isn\'t cool'));
-    }, 1000);
-  });
 
-  p
-    .then(data => {
-      console.log(data);
-    })
-    .catch(err => {
-      console.error(err);
+<body>
+  <script>
+    const p = new Promise((resolve, reject) => {
+      resolve('Adam is cool!');
     });
 
-</script>
+    p
+      .then(response => console.log(response));
+  </script>
 </body>
+
 </html>
