--- a/10 - Promises/promises-introduction.html
+++ b/10 - Promises/promises-introduction.html
@@ -10,7 +10,9 @@
   <script>
     const postsPromise = fetch('https://jsonplaceholder.typicode.com/posts');
 
-    postsPromise.then(response => console.log(response));
+    postsPromise
+      .then(response => response.json())
+      .then(data => console.log(data));
   </script>
 </body>
 
