--- a/11 - Symbols/symbols.html
+++ b/11 - Symbols/symbols.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Symbols</title>
 </head>
+
 <body>
-<script>
-  const wes = Symbol('Wes');
-  const person = Symbol('Wes');
+  <script>
+    const wes = Symbol('Wes');
+    const person = Symbol('Wes');
 
-  const classRoom = {
-    [Symbol('Mark')] : { grade: 50, gender: 'male' },
-    [Symbol('olivia')]: { grade: 80, gender: 'female' },
-    [Symbol('olivia')]: { grade: 80, gender: 'female' },
-  };
+    const classRoom = {
+      [Symbol('Mark')]: {
+        grade: 50,
+        gender: 'male'
+      },
+      [Symbol('Olivia')]: {
+        grade: 80,
+        gender: 'female'
+      },
+      [Symbol('Olivia')]: {
+        grade: 80,
+        gender: 'female'
+      }
+    }
 
-  for (const person in classRoom) {
-    console.log(person);
-  }
-
-  const syms = Object.getOwnPropertySymbols(classRoom);
-  const data = syms.map(sym => classRoom[sym]);
-  console.log(data);
-
-</script>
+    const syms = Object.getOwnPropertySymbols(classRoom);
+    const data = syms.map(sym => classRoom[sym]);
+    console.log(data);
+    //const data;
+  </script>
 </body>
+
 </html>
